--- a/learn/html/列表.html
+++ b/learn/html/列表.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>表格相关标签</title>
+    <title>列表相关标签</title>
     <style>
         body > ul {
             list-style: square;
