--- a/learn/html/样板.html
+++ b/learn/html/样板.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>表格相关标签</title>
+    <title>样板相关标签</title>
     <style>
 
     </style>
 </head>
 <body>
-    
+
 </body>
 </html>
