--- a/learn/bootstrap/1.html
+++ b/learn/bootstrap/1.html
@@ -9,11 +9,85 @@
 </head>
 <body>
     <div class="container">
+        <!-- 
+            <576px max-width 100%
+            <768px max-width 540px
+            <992px max-width 720px
+            <1200px max-width 960px
+            <1400px max-width 1140px
+            >=1400px max-width 1320px
+         -->
+        <h1>我的第一个 Bootstrap 页面</h1>
+        <p>此部分位于 .container 类内部。</p>
+        <p>.container 类提供一个响应式固定宽度容器。</p>
+    </div>
+    <div class="container-sm">
+        <!-- 
+            <576px max-width 100%
+            <768px max-width 540px
+            <992px max-width 720px
+            <1200px max-width 960px
+            <1400px max-width 1140px
+            >=1400px max-width 1320px
+         -->
+        <h1>我的第一个 Bootstrap 页面</h1>
+        <p>此部分位于 .container 类内部。</p>
+        <p>.container 类提供一个响应式固定宽度容器。</p>
+    </div>
+    <div class="container-md">
+        <!-- 
+            <576px max-width 100%
+            <768px max-width 100%
+            <992px max-width 720px
+            <1200px max-width 960px
+            <1400px max-width 1140px
+            >=1400px max-width 1320px
+         -->
+        <h1>我的第一个 Bootstrap 页面</h1>
+        <p>此部分位于 .container 类内部。</p>
+        <p>.container 类提供一个响应式固定宽度容器。</p>
+    </div>
+    <div class="container-lg">
+        <!-- 
+            <576px max-width 100%
+            <768px max-width 100%
+            <992px max-width 100%
+            <1200px max-width 960px
+            <1400px max-width 1140px
+            >=1400px max-width 1320px
+         -->
+        <h1>我的第一个 Bootstrap 页面</h1>
+        <p>此部分位于 .container 类内部。</p>
+        <p>.container 类提供一个响应式固定宽度容器。</p>
+    </div>
+    <div class="container-xl">
+        <!-- 
+            <576px max-width 100%
+            <768px max-width 100%
+            <992px max-width 100%
+            <1200px max-width 100%
+            <1400px max-width 1140px
+            >=1400px max-width 1320px
+         -->
+        <h1>我的第一个 Bootstrap 页面</h1>
+        <p>此部分位于 .container 类内部。</p>
+        <p>.container 类提供一个响应式固定宽度容器。</p>
+    </div>
+    <div class="container-xxl">
+        <!-- 
+            <576px max-width 100%
+            <768px max-width 100%
+            <992px max-width 100%
+            <1200px max-width 100%
+            <1400px max-width 100%
+            >=1400px max-width 1320px
+         -->
         <h1>我的第一个 Bootstrap 页面</h1>
         <p>此部分位于 .container 类内部。</p>
         <p>.container 类提供一个响应式固定宽度容器。</p>
     </div>
     <div class="container-fluid">
+        <!-- max-width 100% -->
         <h1>我的第一个 Bootstrap 页面</h1>
         <p>此部分位于 .container-fluid 类内部。</p>
         <p>.container-fluid 类提供一个全宽度容器，跨越视窗的整个宽度。</p>
