--- a/learn/bootstrap/2.html
+++ b/learn/bootstrap/2.html
@@ -8,10 +8,15 @@
     <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <div class="container p-5 mx-5 me-5">
+    <div class="container p-5 mx-5 mt-5">
         <h1>我的第一个 Bootstrap 页面</h1>
         <p>此部分位于 .container 类内部。</p>
         <p>.container 类提供一个响应式固定宽度容器。</p>
+    </div>
+    <div class="container border border-bottom-0 border-3 border-primary border-opacity-50">
+        <h1 class="container border border-3 border-danger-subtle rounded-pill rounded-end-0">我的第一个 Bootstrap 页面</h1>
+        <p class="w-25">此部分位于 .container 类内部。</p>
+        <p class="min-vh-100">.container 类提供一个响应式固定宽度容器。</p>
     </div>
     
 </body>
