--- a/learn/js/刷题等/购物车.html
+++ b/learn/js/刷题等/购物车.html
@@ -4,29 +4,35 @@
         <meta charset=utf-8>
     </head>
     <body>
-    	<table>
+        <form action="#">
+            <input type="search" name="searchbox1" id="searchbox1">
+            <input type="search" name="searchbox1" id="searchbox2">
+            <input type="search" name="searchbox2" id="searchbox3">
+        </form>
+    	<table class="tc tc1" data-my="my" id="'tb1" style="background-color: aqua;" title="表格">
+            <!-- 注释1 -->
             <thead>
-                <caption>
+                <caption class="c">
                     商品
                 </caption>
             </thead>
             <tbody>
                 <tr>
-                    <td>炸鸡</td>
+                    <td class="c1">炸鸡</td>
                     <td>28元</td>
                     <td><button id="zjtaiduola">-</button></td>
                     <td><span id="zjsl">0</span></td>
                     <td><button id="zjtaishaola">+</button></td>
                 </tr>
                 <tr>
-                    <td>可乐</td>
+                    <td class="c1">可乐</td>
                     <td>5元</td>
                     <td><button id="kltaiduola">-</button></td>
                     <td><span id="klsl">0</span></td>
                     <td><button id="kltaishaola">+</button></td>
                 </tr>
                 <tr>
-                    <td>汉堡</td>
+                    <td class="c1">汉堡</td>
                     <td>10元</td>
                     <td><button id="kltaiduola">-</button></td>
                     <td><span id="klsl">0</span></td>
