--- a/learn/js/BOM/文档.html
+++ b/learn/js/BOM/文档.html
@@ -3,19 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>测试文档</title>
-        <base href="/learn/js/DOM/">
+        <base href="/learn/js/BOM/">
         <link rel="icon" href="home-icon.svg">
-        <!-- <script src="节点属性.js" defer></script> -->
-        <!-- <script src="元素属性.js" defer></script> -->
-        <!-- <script src="节点查询.js" defer></script> -->
-        <!-- <script src="节点遍历.js" defer></script> -->
-        <!-- <script src="元素遍历.js" defer></script> -->
-        <!-- <script src="位置设置.js" defer></script> -->
-        <!-- <script src="元素其他属性.js" defer></script> -->
-        <!-- <script src="文档其他属性.js" defer></script> -->
-        <!-- <script src="深入样式.js" defer></script> -->
-        <!-- <script src="元素其他方法.js" defer></script> -->
-        <!-- <script src="文档其他方法.js" defer></script> -->
+        <!-- <script src="window.js" defer></script> -->
+        <!-- <script src="console.js" defer></script> -->
+        <!-- <script src="location.js" defer></script> -->
+        <!-- <script src="navigator.js" defer></script> -->
+        <!-- <script src="screen.js" defer></script> -->
+        <script src="history.js" defer></script>
         <style>
             table {
                 padding: 20px 10px;
