--- a/learn/js/BOM/文档.html
+++ b/learn/js/BOM/文档.html
@@ -4,13 +4,17 @@
         <meta charset="UTF-8">
         <title>测试文档</title>
         <base href="/learn/js/BOM/">
-        <link rel="icon" href="home-icon.svg">
+        <!-- <link rel="icon" href="home-icon.svg"> -->
         <!-- <script src="window.js" defer></script> -->
         <!-- <script src="console.js" defer></script> -->
         <!-- <script src="location.js" defer></script> -->
         <!-- <script src="navigator.js" defer></script> -->
         <!-- <script src="screen.js" defer></script> -->
-        <script src="history.js" defer></script>
+        <!-- <script src="history.js" defer></script> -->
+        <!-- <script src="storage.js" defer></script> -->
+        <!-- <script src="XMLHttpRequest.js" defer></script> -->
+        <!-- <script src="fetch.js" defer></script> -->
+        <!-- <script src="如何实现fetch.js" defer></script> -->
         <style>
             table {
                 padding: 20px 10px;
