--- a/learn/js/DOM/文档.html
+++ b/learn/js/DOM/文档.html
@@ -13,9 +13,10 @@
         <!-- <script src="位置设置.js" defer></script> -->
         <!-- <script src="元素其他属性.js" defer></script> -->
         <!-- <script src="文档其他属性.js" defer></script> -->
-        <!-- <script src="深入样式.js" defer></script> -->
+        <script src="深入样式.js" defer></script>
         <!-- <script src="元素其他方法.js" defer></script> -->
         <!-- <script src="文档其他方法.js" defer></script> -->
+        <!-- <script src="cookie.js" defer></script> -->
         <style>
             table {
                 padding: 20px 10px;
