--- a/learn/js/BOM/另一文档.html
+++ b/learn/js/BOM/另一文档.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>第一次打开的文档</h1>
+    <div>
+        <p>第一段落</p>
+        <p>第二段落</p>
+        <p>第三段落</p>
+    </div>
     <script>
         setTimeout(() => {
             location.assign('http://127.0.0.1:3000/learn/js/BOM/%E6%96%87%E6%A1%A3.html');
