--- a/learn/js/Event/文档.html
+++ b/learn/js/Event/文档.html
@@ -5,11 +5,28 @@
         <title>测试文档</title>
         <base href="/learn/js/Event/">
         <link rel="icon" href="home-icon.svg">
-        <script src="基本事件.js" defer></script>
+        <!-- <script src="基本事件.js" defer></script> -->
+        <!-- <script src="mouse.js" defer></script> -->
+        <!-- <script src="focus.js" defer></script> -->
+        <script src="其他事件.js" defer></script>
     </head>
     <body>
         <h1>测试文档</h1>
+        <div class="div1" style="border: 1px solid black;">
+            <p style="border: 1px solid black;">段落一</p>
+            <p style="border: 1px solid black;">段落二</p>
+        </div>
+        <div class="div2" style="border: 1px solid black;">
+            <p style="border: 1px solid black;">段落一</p>
+            <p style="border: 1px solid black;">段落二</p>
+        </div>
         <button id="btn1">按钮</button>
         <input type="text" name="box" id="text1">
+        <details>
+            <summary>可折叠标签</summary>
+            <p>具体内容</p>
+            <p>具体内容</p>
+            <p>具体内容</p>
+        </details>
     </body>
 </html>
