--- a/learn/js/Event/文档.html
+++ b/learn/js/Event/文档.html
@@ -8,6 +8,7 @@
         <!-- <script src="基本事件.js" defer></script> -->
         <!-- <script src="mouse.js" defer></script> -->
         <!-- <script src="focus.js" defer></script> -->
+        <script src="form.js" defer></script>
         <script src="其他事件.js" defer></script>
     </head>
     <body>
@@ -28,5 +29,12 @@
             <p>具体内容</p>
             <p>具体内容</p>
         </details>
+        <form action="#">
+            <input type="search" name="" id="">
+            <textarea name="" id=""></textarea>
+            <input type="text" name="" id="" value="预设文本">
+            <input type="reset" name="" id="">
+            <input type="submit" name="" id="">
+        </form>
     </body>
 </html>
