--- a/learn/bootstrap/基础类.html
+++ b/learn/bootstrap/基础类.html
@@ -109,7 +109,7 @@
         <p class="shadow-lg bg-danger p-4 mb-4">阴影</p>
         <p class="shadow-none bg-danger p-4 mb-4">阴影</p>
     </details>
-
+    <!-- 未完全理解 -->
     <details>
         <summary>纵横比</summary>
         <p class="bg-danger">纵横比</p>
@@ -152,7 +152,7 @@
         <p class="bg-gradient">背景颜色</p>
     </details>
 
-    <details open>
+    <details>
         <summary>文本颜色</summary>
         <p class="">文本颜色</p>
         <p class="text-primary">文本颜色</p>
@@ -187,10 +187,72 @@
         <p class="text-reset">文本颜色</p>
         <hr>
         <hr>
-        <p class="text-bg-dark bg-dark">文本颜色</p>
-        <p class="text-bg-light bg-light">文本颜色</p>
+
     </details>
 
+    <details>
+        <p class="text-bg-primary">文本背景颜色</p>
+        <p class="text-bg-secondary">文本背景颜色</p>
+        <p class="text-bg-success">文本背景颜色</p>
+        <p class="text-bg-info">文本背景颜色</p>
+        <p class="text-bg-warning">文本背景颜色</p>
+        <p class="text-bg-danger">文本背景颜色</p>
+        <p class="text-bg-light">文本背景颜色</p>
+        <p class="text-bg-dark">文本背景颜色</p>
+    </details>
+
+    <details open>
+        <summary>链接</summary>
+        <a class="link-primary">链接</a>
+        <a class="link-secondary">链接</a>
+        <a class="link-success">链接</a>
+        <a class="link-info">链接</a>
+        <a class="link-warning">链接</a>
+        <a class="link-danger">链接</a>
+        <a class="link-light">链接</a>
+        <a class="link-dark">链接</a>
+        <a class="link-body-emphasis">链接</a>
+        <a class="link-underline-primary">链接</a>
+    </details>
+    <!-- 没完全搞懂 -->
+    <details>
+        <summary>对齐</summary>
+        <span class="">对齐</span>
+        <span class="align-baseline">对齐</span>
+        <span class="align-top">对齐</span>
+        <span class="align-middle">对齐</span>
+        <span class="align-bottom">对齐</span>
+        <span class="align-text-top">对齐</span>
+        <span class="align-text-bottom">对齐</span>
+    </details>
+
+    <details>
+        <summary>字体</summary>
+        <p class="">字体大小</p>
+        <p class="fs-1">字体大小</p>
+        <p class="fs-2">字体大小</p>
+        <p class="fs-3">字体大小</p>
+        <p class="fs-4">字体大小</p>
+        <p class="fs-5">字体大小</p>
+        <p class="fs-6">字体大小</p>
+        <hr>
+        <hr>
+        <p class="">字体字重</p>
+        <p class="fw-lighter">字体字重</p>
+        <p class="fw-light">字体字重</p>
+        <p class="fw-normal">字体字重</p>
+        <p class="fw-medium">字体字重</p>
+        <p class="fw-semibold">字体字重</p>
+        <p class="fw-bold">字体字重</p>
+        <p class="fw-bolder">字体字重</p>
+        <hr>
+        <hr>
+        <p>字体行高</p>
+        <p class="lh-1">字体行高</p>
+        <p class="lh-sm">字体行高</p>
+        <p class="lh-base">字体行高</p>
+        <p class="lh-lg">字体行高</p>
+    </details>
 
 
 
