bs 布局浮动位置

--- a/learn/bootstrap/基础类.html
+++ b/learn/bootstrap/基础类.html
@@ -8,6 +8,8 @@
     <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="container mt-3">
+    
+    <!-- 边框 -->
     <details>
         <summary>边框</summary>
         <p class="border">边框</p>
@@ -22,40 +24,13 @@
         <p class="border border-end-0">边框</p>
         <hr>
         <hr>
-        <p class="border border-primary">边框</p>
-        <p class="border border-secondary">边框</p>
-        <p class="border border-success">边框</p>
-        <p class="border border-info">边框</p>
-        <p class="border border-warning">边框</p>
-        <p class="border border-danger">边框</p>
-        <p class="border border-light">边框</p>
-        <p class="border border-dark">边框</p>
-        <p class="border border-white">边框</p>
-        <p class="border border-black">边框</p>
-        <p class="border border-primary-subtle">边框</p>
-        <p class="border border-secondary-subtle">边框</p>
-        <p class="border border-success-subtle">边框</p>
-        <p class="border border-info-subtle">边框</p>
-        <p class="border border-warning-subtle">边框</p>
-        <p class="border border-danger-subtle">边框</p>
-        <p class="border border-light-subtle">边框</p>
-        <p class="border border-dark-subtle">边框</p>
-        <hr>
-        <hr>
-        <p class="border border-opacity-10">边框</p>
-        <p class="border border-opacity-25">边框</p>
-        <p class="border border-opacity-50">边框</p>
-        <p class="border border-opacity-75">边框</p>
-        <p class="border border-opacity-100">边框</p>
-        <hr>
-        <hr>
         <p class="border border-1">边框</p>
         <p class="border border-2">边框</p>
         <p class="border border-3">边框</p>
         <p class="border border-4">边框</p>
         <p class="border border-5">边框</p>
     </details>
-
+    <!-- 圆角 -->
     <details>
         <summary>圆角</summary>
         <p class="bg-danger">圆角</p>
@@ -75,7 +50,7 @@
         <p class="rounded-top-pill bg-danger">圆角</p>
         <p class="rounded-bottom-circle bg-danger">圆角</p>
     </details>
-
+    <!-- 内外边距 -->
     <details>
         <summary>内边距，外边距同理</summary>
         <p class="bg-danger">内边框</p>
@@ -87,7 +62,7 @@
         <p class="ps-3 bg-danger">内边框</p>
         <p class="pe-3 bg-danger">内边框</p>
     </details>
-
+    <!-- 高宽度 -->
     <details>
         <summary>宽度，高度同理</summary>
         <p class="bg-danger">宽度</p>
@@ -100,7 +75,7 @@
         <p class="vw-100 bg-danger">宽度</p>
         <p class="min-vw-100 bg-danger">宽度</p>
     </details>
-
+    <!-- 阴影 -->
     <details>
         <summary>阴影</summary>
         <p class="bg-danger">阴影</p>
@@ -109,7 +84,7 @@
         <p class="shadow-lg bg-danger p-4 mb-4">阴影</p>
         <p class="shadow-none bg-danger p-4 mb-4">阴影</p>
     </details>
-    <!-- 未完全理解 -->
+    <!-- 纵横比，未完全理解 -->
     <details>
         <summary>纵横比</summary>
         <p class="bg-danger">纵横比</p>
@@ -119,7 +94,29 @@
         <p class="ratio ratio-16x9 bg-danger">纵横比</p>
         <p class="ratio ratio-21x9 bg-danger">纵横比</p>
     </details>
-
+    <!-- 边框颜色 -->
+    <details>
+        <summary>边框颜色</summary>
+        <p class="border border-primary">边框</p>
+        <p class="border border-secondary">边框</p>
+        <p class="border border-success">边框</p>
+        <p class="border border-info">边框</p>
+        <p class="border border-warning">边框</p>
+        <p class="border border-danger">边框</p>
+        <p class="border border-light">边框</p>
+        <p class="border border-dark">边框</p>
+        <p class="border border-white">边框</p>
+        <p class="border border-black">边框</p>
+        <p class="border border-primary-subtle">边框</p>
+        <p class="border border-secondary-subtle">边框</p>
+        <p class="border border-success-subtle">边框</p>
+        <p class="border border-info-subtle">边框</p>
+        <p class="border border-warning-subtle">边框</p>
+        <p class="border border-danger-subtle">边框</p>
+        <p class="border border-light-subtle">边框</p>
+        <p class="border border-dark-subtle">边框</p>
+    </details>
+    <!-- 背景颜色 -->
     <details>
         <summary>背景颜色</summary>
         <p class="">背景颜色</p>
@@ -151,7 +148,7 @@
         <p class="bg-transparent">背景颜色</p>
         <p class="bg-gradient">背景颜色</p>
     </details>
-
+    <!-- 文本颜色 -->
     <details>
         <summary>文本颜色</summary>
         <p class="">文本颜色</p>
@@ -189,7 +186,7 @@
         <hr>
 
     </details>
-
+    <!-- 文本背景颜色 -->
     <details>
         <p class="text-bg-primary">文本背景颜色</p>
         <p class="text-bg-secondary">文本背景颜色</p>
@@ -200,21 +197,40 @@
         <p class="text-bg-light">文本背景颜色</p>
         <p class="text-bg-dark">文本背景颜色</p>
     </details>
-
-    <details open>
+    <!-- 链接 -->
+    <details>
         <summary>链接</summary>
-        <a class="link-primary">链接</a>
-        <a class="link-secondary">链接</a>
-        <a class="link-success">链接</a>
-        <a class="link-info">链接</a>
-        <a class="link-warning">链接</a>
-        <a class="link-danger">链接</a>
-        <a class="link-light">链接</a>
-        <a class="link-dark">链接</a>
-        <a class="link-body-emphasis">链接</a>
-        <a class="link-underline-primary">链接</a>
+        <a href="#" class="link-primary">链接</a>
+        <a href="#" class="link-secondary">链接</a>
+        <a href="#" class="link-success">链接</a>
+        <a href="#" class="link-info">链接</a>
+        <a href="#" class="link-warning">链接</a>
+        <a href="#" class="link-danger">链接</a>
+        <a href="#" class="link-light">链接</a>
+        <a href="#" class="link-dark">链接</a>
+        <a href="#" class="link-body-emphasis">链接</a>
+        <hr>
+        <hr>
+        <a href="#" class="link-danger link-underline">链接</a>
+        <a href="#" class="link-danger link-underline-primary">链接</a>
+        <a href="#" class="link-danger link-underline-secondary">链接</a>
+        <a href="#" class="link-danger link-underline-success">链接</a>
+        <a href="#" class="link-danger link-underline-info">链接</a>
+        <a href="#" class="link-danger link-underline-warning">链接</a>
+        <a href="#" class="link-danger link-underline-light">链接</a>
+        <a href="#" class="link-danger link-underline-dark">链接</a>
+        <hr>
+        <hr>
+        <a href="#" class="link-offset-3">链接</a>
+        <a href="#" class="link-offset-3-hover">链接</a>
+        <a href="#" class="link-primary link-offset-1">链接</a>
+        <a href="#" class="link-primary link-offset-2">链接</a>
+        <a href="#" class="link-primary link-offset-3">链接</a>
+        <a href="#" class="link-primary link-offset-1-hover">链接</a>
+        <a href="#" class="link-primary link-offset-2-hover">链接</a>
+        <a href="#" class="link-primary link-offset-3-hover">链接</a>
     </details>
-    <!-- 没完全搞懂 -->
+    <!-- 对齐，没完全搞懂 -->
     <details>
         <summary>对齐</summary>
         <span class="">对齐</span>
@@ -225,7 +241,7 @@
         <span class="align-text-top">对齐</span>
         <span class="align-text-bottom">对齐</span>
     </details>
-
+    <!-- 字体 -->
     <details>
         <summary>字体</summary>
         <p class="">字体大小</p>
@@ -253,10 +269,149 @@
         <p class="lh-base">字体行高</p>
         <p class="lh-lg">字体行高</p>
     </details>
+    <!-- 透明度 -->
+    <details>
+        <summary>不透明度</summary>
+        <p class="opacity-0">常规不透明度</p>
+        <p class="opacity-25">常规不透明度</p>
+        <p class="opacity-50">常规不透明度</p>
+        <p class="opacity-75">常规不透明度</p>
+        <p class="opacity-100">常规不透明度</p>
+        <hr>
+        <hr>
+        <p class="border border-3 border-primary border-opacity-10">边框</p>
+        <p class="border border-3 border-primary border-opacity-25">边框</p>
+        <p class="border border-3 border-primary border-opacity-50">边框</p>
+        <p class="border border-3 border-primary border-opacity-75">边框</p>
+        <p class="border border-3 border-primary border-opacity-100">边框</p>
+        <hr>
+        <hr>
+        <p class="bg-danger bg-opacity-10">背景</p>
+        <p class="bg-danger bg-opacity-25">背景</p>
+        <p class="bg-danger bg-opacity-75">背景</p>
+        <p class="bg-danger bg-opacity-100">背景</p>
+        <hr>
+        <hr>
+        <p class="text-danger text-opacity-25">文本</p>
+        <p class="text-danger text-opacity-50">文本</p>
+        <p class="text-danger text-opacity-75">文本</p>
+        <p class="text-danger text-opacity-100">文本</p>
+        <hr>
+        <hr>
+        <a href="#" class="link-danger link-opacity-10">链接</a>
+        <a href="#" class="link-danger link-opacity-25">链接</a>
+        <a href="#" class="link-danger link-opacity-50">链接</a>
+        <a href="#" class="link-danger link-opacity-75">链接</a>
+        <a href="#" class="link-danger link-opacity-100">链接</a>
+        <hr>
+        <a href="#" class="link-danger link-opacity-10-hover">链接</a>
+        <a href="#" class="link-danger link-opacity-25-hover">链接</a>
+        <a href="#" class="link-danger link-opacity-50-hover">链接</a>
+        <a href="#" class="link-danger link-opacity-75-hover">链接</a>
+        <a href="#" class="link-danger link-opacity-100-hover">链接</a>
+        <hr>
+        <a href="#" class="link-danger link-underline-opacity-0">链接</a>
+        <a href="#" class="link-danger link-underline-opacity-10">链接</a>
+        <a href="#" class="link-danger link-underline-opacity-25">链接</a>
+        <a href="#" class="link-danger link-underline-opacity-50">链接</a>
+        <a href="#" class="link-danger link-underline-opacity-75">链接</a>
+        <a href="#" class="link-danger link-underline-opacity-100">链接</a>
+        <hr>
+        <a href="#" class="link-danger link-underline-opacity-0-hover">链接</a>
+        <a href="#" class="link-danger link-underline-opacity-10-hover">链接</a>
+        <a href="#" class="link-danger link-underline-opacity-25-hover">链接</a>
+        <a href="#" class="link-danger link-underline-opacity-50-hover">链接</a>
+        <a href="#" class="link-danger link-underline-opacity-75-hover">链接</a>
+        <a href="#" class="link-danger link-underline-opacity-100-hover">链接</a>
+    </details>
+    <!-- 字体其他 -->
+    <details>
+        <summary>字体其他</summary>
+        <p class="">字体其他123abcABC</p>
+        <p class="font-monospace">字体其他123abcABC</p>
+        <p class="fst-italic">字体其他123abcABC</p>
+        <p class="fst-normal">字体其他123abcABC</p>
+        <p class="text-start">字体其他123abcABC</p>
+        <p class="text-center">字体其他123abcABC</p>
+        <p class="text-end">字体其他123abcABC</p>
+        <p class="text-decoration-none">字体其他123abcABC</p>
+        <p class="text-decoration-underline">字体其他123abcABC</p>
+        <p class="text-decoration-line-through">字体其他123abcABC</p>
+        <p class="text-uppercase">abc字体其他123ABC</p>
+        <p class="text-lowercase">abc字体其他123ABC</p>
+        <p class="text-capitalize">abc字体其他123ABC</p>
+    </details>
+    <!-- 位置 -->
+    <details>
+        <summary>位置</summary>
+        <div class="fixed-top bg-primary bg-opacity-10">顶部</div>
+        <div class="fixed-bottom bg-primary bg-opacity-10">底部</div>
+        <div class="sticky-top bg-primary-subtle text-center">粘性</div>
+        <div class="sticky-bottom bg-primary-subtle text-center">粘性</div>
+    </details>
+    <!-- 浮动 -->
+    <details>
+        <summary>浮动</summary>
+        <p class="float-start">左侧</p>
+        <p class="float-end">右侧</p>
+        <p class="clearfix"></p>
+    </details>
+    <!-- 布局 -->
+    <details>
+        <summary>垂直水平</summary>
+        <div class="hstack">
+            <div>123</div>
+            <div>123</div>
+            <div>123</div>
+        </div>
+        <div class="vstack">
+            <span>123</span>
+            <span>123</span>
+            <span>123</span>
+        </div>
+    </details>
+    <!-- 可见性 -->
+    <details>
+        <summary>可见性</summary>
+        <p class="visible">可见</p>
+        <p class="invisible">不可见</p>
+    </details>
+    <!-- 文本选择 -->
+    <details>
+        <summary>文本选择</summary>
+        <p class="">这是一段文本</p>
+        <p class="user-select-all">这是一段文本</p>
+        <p class="user-select-auto">这是一段文本</p>
+        <p class="user-select-none">这是一段文本</p>
+    </details>
+    <!-- 鼠标事件 -->
+    <details>
+        <summary>鼠标事件</summary>
+        <a href="#" class="">链接</a>
+        <a href="#" class="pe-none">链接</a>
+        <a href="#" class="pe-auto">链接</a>
+    </details>
+    <!-- 焦点 -->
+    <details>
+        <summary>焦点</summary>
+        <button class="focus-ring">焦点</button>
+        <button class="focus-ring focus-ring-primary">焦点</button>
+        <button class="focus-ring focus-ring-secondary">焦点</button>
+        <button class="focus-ring focus-ring-success">焦点</button>
+        <button class="focus-ring focus-ring-info">焦点</button>
+        <button class="focus-ring focus-ring-warning">焦点</button>
+        <button class="focus-ring focus-ring-danger">焦点</button>
+        <button class="focus-ring focus-ring-light">焦点</button>
+        <button class="focus-ring focus-ring-dark">焦点</button>
+    </details>
+    <!-- 溢出 -->
+    <details>
+        <summary>溢出</summary>
+        <div class="overflow-scroll" style="height: 32px;">这是一段溢出的文本这是一段溢出的文本这是一段溢出的文本这是一段溢出的文本这是一段溢出的文本</div>
+        <div class="overflow-hidden" style="height: 32px;">这是一段溢出的文本这是一段溢出的文本这是一段溢出的文本这是一段溢出的文本这是一段溢出的文本</div>
+        <div class="overflow-auto" style="height: 32px;">这是一段溢出的文本这是一段溢出的文本这是一段溢出的文本这是一段溢出的文本这是一段溢出的文本</div>
+        <div class="overflow-visible" style="height: 32px;">这是一段溢出的文本这是一段溢出的文本这是一段溢出的文本这是一段溢出的文本这是一段溢出的文本</div>
+    </details>
 
-
-
-
-    
 </body>
 </html>
