--- a/learn/bootstrap/基础类.html
+++ b/learn/bootstrap/基础类.html
@@ -348,13 +348,17 @@
         <div class="fixed-bottom bg-primary bg-opacity-10">底部</div>
         <div class="sticky-top bg-primary-subtle text-center">粘性</div>
         <div class="sticky-bottom bg-primary-subtle text-center">粘性</div>
+        <div class="position-relative border" style="height: 200px;">
+            <span class="translate-middle" style="position: absolute;top: 50%;left: 50%;">123123123123123123123123123123123123</span>
+            <span class="translate-middle-x" style="position: absolute;top: 50%;left: 50%;">123123123123123123123123123123123123</span>
+            <span class="translate-middle-y" style="position: absolute;top: 50%;left: 50%;">123123123123123123123123123123123123</span>
+        </div>
     </details>
     <!-- 浮动 -->
-    <details>
+    <details class="clearfix">
         <summary>浮动</summary>
         <p class="float-start">左侧</p>
         <p class="float-end">右侧</p>
-        <p class="clearfix"></p>
     </details>
     <!-- 布局 -->
     <details>
