--- a/learn/bootstrap/进度条.html
+++ b/learn/bootstrap/进度条.html
@@ -31,6 +31,9 @@
           危险
         </div>
     </div>
+    <div class="progress">
+        <div class="progress-bar"></div>
+    </div>
 
 
 </body>
