--- a/learn/bootstrap/徽章.html
+++ b/learn/bootstrap/徽章.html
@@ -7,7 +7,13 @@
     <link href="bootstrap-5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
 </head>
-<body class="container mt-5">
-    <div class="badge bg-primary text-dark">徽章</div>
+<body class="container mt-5" data-bs-theme="dark">
+    <div class="badge">徽章</div>
+    <div class="badge bg-primary">徽章</div>
+    <div class="badge bg-primary rounded-pill">徽章</div>
+    <div class="badge bg-primary rounded-circle">徽章</div>
+    <div class="list-group">
+        <li class="list-group-item text-center">一条 <div class="badge bg-danger rounded-circle">5</div></li>
+    </div>
 </body>
 </html>
