--- a/learn/bootstrap/按钮.html
+++ b/learn/bootstrap/按钮.html
@@ -9,32 +9,34 @@
 </head>
 <body class="container mt-5">
     <button type="button" class="btn">基本</button>
-    <button type="button" class="btn btn-primary">主色</button>
-    <button type="button" class="btn btn-secondary">次色</button>
-    <button type="button" class="btn btn-success">成功</button>
-    <button type="button" class="btn btn-info">信息</button>
-    <button type="button" class="btn btn-warning">警告</button>
-    <button type="button" class="btn btn-danger">危险</button>
-    <button type="button" class="btn btn-dark">深色</button>
-    <button type="button" class="btn btn-light">浅色</button>
-    <button type="button" class="btn btn-link">链接</button>
-    <a href="#" class="btn btn-success">链接按钮</a>
-    <button type="button" class="btn btn-success">按钮</button>
-    <input type="button" class="btn btn-success" value="输入按钮">
+    <div class="btn btn-danger">div按钮</div>
+    <button type="button" class="btn btn-success">button按钮</button>
+    <input type="button" class="btn btn-success" value="input按钮">
     <input type="submit" class="btn btn-success" value="提交按钮">
     <input type="reset" class="btn btn-success" value="重置按钮">
+    <hr>
+    <button type="button" class="btn btn-primary">颜色按钮</button>
+    <button type="button" class="btn btn-outline-info">颜色按钮</button>
+    <button type="button" class="btn btn-link">链接按钮</button>
+    <a href="#" class="btn btn-link">链接按钮</a>
+    <hr>
+    <button type="button" class="btn btn-danger">按钮</button>
     <button type="button" class="btn btn-sm btn-danger">按钮</button>
     <button type="button" class="btn btn-lg btn-danger">按钮</button>
+    <hr>
     <div class="d-grid row-gap-2">
-        <button type="button" class="btn btn-block btn-danger">按钮</button>
-        <button type="button" class="btn btn-block btn-danger">按钮</button>
+        <button type="button" class="btn btn-danger">按钮</button>
+        <button type="button" class="btn btn-danger">按钮</button>
     </div>
+    <hr>
     <button type="button" class="btn btn-danger" disabled>按钮</button>
     <button type="button" class="btn btn-danger active">按钮</button>
-    <a href="#" class="btn btn-success disabled">链接按钮</a>
+    <hr>
     <div class="btn-group">
         <button type="button" class="btn btn-primary">苹果</button>
         <button type="button" class="btn btn-primary">三星</button>
+        <button type="button" class="btn btn-primary">索尼</button>
+        <button type="button" class="btn btn-primary">索尼</button>
         <button type="button" class="btn btn-primary">索尼</button>
     </div>
     <div class="btn-group-lg btn-group-vertical">
@@ -42,16 +44,12 @@
         <button type="button" class="btn btn-primary">三星</button>
         <button type="button" class="btn btn-primary">索尼</button>
     </div>
-    <div class="btn-group">
+    <div class="btn-toolbar">
         <button type="button" class="btn btn-primary">苹果</button>
         <button type="button" class="btn btn-primary">三星</button>
-        <div class="btn-group">
-          <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">索尼</button>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">平板电脑</a>
-            <a class="dropdown-item" href="#">智能手机</a>
-          </div>
-        </div>
+        <button type="button" class="btn btn-primary">索尼</button>
+        <button type="button" class="btn btn-primary">索尼</button>
+        <button type="button" class="btn btn-primary">索尼</button>
     </div>
 </body>
 </html>
